src/regression_tests/snapshots/nixfmt_rs__regression_tests__ir__list_rendering-4.snap
---
source: src/regression_tests/ir.rs
description: "[ 1 2 ]"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m[[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m1[0m[0;97;1m"[0m [0;93;1m][0m
    [0;96;1m,[0m Spacing Hardline
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m2[0m[0;97;1m"[0m [0;93;1m][0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m][0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
