src/regression_tests/snapshots/nixfmt_rs__regression_tests__ir__transparent_in_parens_break.snap
---
source: src/regression_tests/ir.rs
description: "(lib.filterAttrs (x: y))"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m([0m[0;97;1m"[0m
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Group Transparent
            [0;35m[[0m Group RegularG
                [0;36m[[0m Spacing Break
                [0;36m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mlib.filterAttrs[0m[0;97;1m"[0m
                [0;36m][0m
            [0;35m][0m
        [0;93;1m,[0m Spacing Space
        [0;93;1m,[0m Group Priority
            [0;35m[[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m([0m[0;97;1m"[0m
            [0;35m,[0m Spacing Break
            [0;35m,[0m Group RegularG
                [0;36m[[0m Spacing Break
                [0;36m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mx:[0m[0;97;1m"[0m
                [0;36m,[0m Spacing Space
                [0;36m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1my[0m[0;97;1m"[0m
                [0;36m][0m
            [0;35m,[0m Spacing Break
            [0;35m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m)[0m[0;97;1m"[0m
            [0;35m][0m
        [0;93;1m,[0m Spacing Break
        [0;93;1m][0m
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m)[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
