src/regression_tests/snapshots/nixfmt_rs__regression_tests__ir__with_grouping.snap
---
source: src/regression_tests/ir.rs
description: "{ x = with p; y; }"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m{[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mx[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m=[0m[0;97;1m"[0m
        [0;93;1m,[0m Group RegularG
            [0;35m[[0m Spacing Space
            [0;35m,[0m Group RegularG
                [0;36m[[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mwith[0m[0;97;1m"[0m
                [0;36m,[0m Spacing Hardspace
                [0;36m,[0m Group RegularG
                    [0;33m[[0m Text [0;92;1m4[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mp[0m[0;97;1m"[0m [0;33m][0m
                [0;36m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
                [0;36m][0m
            [0;35m,[0m Spacing Space
            [0;35m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1my[0m[0;97;1m"[0m
            [0;35m][0m
        [0;93;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
        [0;93;1m][0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m}[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
