src/regression_tests/snapshots/nixfmt_rs__regression_tests__ir__with_set_body.snap
---
source: src/regression_tests/ir.rs
description: "with p; { a = 1; }"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mwith[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Group RegularG
            [0;35m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mp[0m[0;97;1m"[0m [0;35m][0m
        [0;93;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
        [0;93;1m][0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m{[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1ma[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m=[0m[0;97;1m"[0m
        [0;93;1m,[0m Group RegularG
            [0;35m[[0m Spacing Space
            [0;35m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m1[0m[0;97;1m"[0m
            [0;35m][0m
        [0;93;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
        [0;93;1m][0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m}[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
